--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,6 +4,8 @@ body {
 
 :root {
   --background-color: #25262A;
+  --background-light: #494A4E;
+  --card-default: #2F3034;
   --primary: #ffffff;
   --secondary: #60C697;
 }
