--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,8 +6,8 @@ body {
   --background-color: #25262A;
   --background-light: #494A4E;
   --card-default: #2F3034;
-  --primary: #ffffff;
-  --secondary: #60C697;
+  --primary: #60C697;
+  --secondary: #ffffff;
 }
 
 .App {
